Project: Tic-Tac-Toe submissio

--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 			</div>
 			<div class="game-area">
 				<div class="player-1">
-					<img src="./svg/account.svg" alt="" />
-					<p class="first-human">P.1</p>
+					<img src="./svg/p1.svg" alt="" />
+					<p class="first-contender">P.1</p>
 				</div>
 				<p class="versus">VS</p>
 				<div class="player-2">
-					<img src="./svg/./monitor.svg" alt="" />
-					<button class="second-human">P.2</button>
-					<button class="computer" aria-selected="true">AI</button>
+					<img src="./svg/./p2.svg" alt="" />
+					<p class="second-contender">P.2</p>
 				</div>
 				<button class="start">Start</button>
 			</div>
