--- a/index.html
+++ b/index.html
@@ -4,31 +4,38 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Tic Tac Toe</title>
+		<title>Tic-Tac-Toe</title>
 		<link rel="stylesheet" href="style.css" />
 		<script src="./script.js" defer></script>
 	</head>
 	<body>
 		<div class="container">
-			<div class="title">
-				<p>Tic-Tac-Toe</p>
+			<h1 class="title">Tic-Tac-Toe</h1>
+			<div class="player-1">
+				<img src="./svg/p1.svg" alt="" />
+				<p class="player1-text">Player 1</p>
 			</div>
 			<div class="game-area">
-				<div class="player-1">
-					<img src="./svg/p1.svg" alt="" />
-					<p class="first-contender">P.1</p>
+				<p class="display-text">Human vs ?</p>
+				<button class="start display-none">Start</button>
+				<div class="game-board">
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
+					<div class="unit"></div>
 				</div>
-				<p class="versus">VS</p>
-				<div class="player-2">
-					<img src="./svg/./p2.svg" alt="" />
-					<p class="second-contender">P.2</p>
-				</div>
-				<button class="start">Start</button>
 			</div>
-
-			<div class="copyright">
-				<p>Created by Fatih Karaoğlu</p>
+			<div class="player-2">
+				<img src="./svg/questionMark.svg" alt="" />
+				<button class="human">Human</button>
+				<button class="computer">A.I</button>
 			</div>
+			<h2 class="copyright">Created by Fatih Karaoğlu</h2>
 		</div>
 	</body>
 </html>
